--- a/src/component/pages/Home/Home.scss
+++ b/src/component/pages/Home/Home.scss
@@ -342,6 +342,10 @@ svg {
   }
 }
 
+.skill_subtitle .services__description .skill__description .home__description {
+  color: #dddd;
+}
+
 .model-contants-all {
   width: 100%;
   height: 100%;
